syntax = "proto3";

option java_multiple_files = true;
option optimize_for = SPEED;
option java_package = "io.scvis.grpc.geometry";
message Vector2D {
	double x = 1;
	double y = 2;
}